Improving chapter 11 and 17 modules